k8s/dxc/namespaces/development/autorization-policy.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  namespace: services-inkijk-development
  name: edge-inbound
spec:
  action: ALLOW
  selector:
    matchLabels:
      tier: edge-inbound
  rules:
    - from:
        - source:
            principals: 
              - "cluster.local/ns/eqap-istio/sa/istio-ingressgateway"
              - "cluster.local/ns/eqap-istio-gateway/sa/istio-ingressgateway"
      to:
        - operation:
            methods: ["GET", "POST"]
            paths: ["/*"]
